will/networkpolicy/adminnetworkpolicy/netpol-anp-pass-allow-from-ingress.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: pass-allow-from-ingress
spec:
  ingress:
    - action: Pass
      from:
        - namespaces:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
      name: pass-allow-from-ingress
  priority: 7
  subject:
    namespaces:
      matchExpressions:
        - key: zone
          operator: In
          values:
            - dmz
            - oss
            - it
