will/networkpolicy/adminnetworkpolicy/netpol-anp-pass-dmz-allow-same-namespace.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: pass-dmz-allow-same-namespace
spec:
  ingress:
    - action: Pass
      from:
        - namespaces:
            matchExpressions:
              - key: zone
                operator: In
                values:
                  - dmz
      name: pass-dmz-allow-same-namespace
  priority: 7
  subject:
    namespaces:
      matchExpressions:
        - key: zone
          operator: In
          values:
            - dmz
